objects/Cost_Center__c.object
<CustomObject>
    <fields>
        <fullName>Two_Pass_Calculation__c</fullName>
        <label>Two Pass Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Validity end date</description>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <label>Cost Center</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cost_Center_ID1__c</columns>
        <columns>Description__c</columns>
        <columns>Region__c</columns>
        <columns>Business_Segment__c</columns>
        <columns>Cost_Center_GAAP_Reporting_Hierarchy__c</columns>
        <columns>Cost_Center_Management_Hierarchy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fianance_MDM_L1_Approval_Cost_Center</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L1 Approval</label>
        <queue>Finance_MDM_L1_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_CORP_FPA_Cost_Center</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM CORP FPA</label>
        <queue>Finance_MDM_CORP_FPA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Accounting_Cost_Center</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Accounting</label>
        <queue>Finance_MDM_Finance_Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Controller_Cost_Center</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Controller</label>
        <queue>Finance_MDM_Finance_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L2_Approval_Cost_Center</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L2 Approval</label>
        <queue>Finance_MDM_L2_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L3_Approval_Cost_Center</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L3 Approval</label>
        <queue>Finance_MDM_L3_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Revenue_Controller_Cost_Center</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Revenue Controller</label>
        <queue>Finance_MDM_Revenue_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>SFDC Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cost_Center_Freez</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, Cost_Center_Freez__c = true, ISCHANGED(Function_ID__c))</errorConditionFormula>
        <errorDisplayField>Function_ID__c</errorDisplayField>
        <errorMessage>Cost Center can&apos;t  be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_center_Type_Freez</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, Cost_Center_Freez__c = true, ISCHANGED(Cost_Center_Type__c))</errorConditionFormula>
        <errorDisplayField>Cost_Center_Type__c</errorDisplayField>
        <errorMessage>Cost Center Type can&apos;t  be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_Freez</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, Cost_Center_Freez__c = true, ISCHANGED(Region__c))</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region can&apos;t  be changed.</errorMessage>
    </validationRules>
</CustomObject>